2002-11-27  Emmanuel Beffara  <manu@beffara.org>

	* man/: Updated the man pages with --check and the actual meaning
	of --deps.

	* src/modules/bibtex.py: Added bibliography databases and style
	files to the list of dependencies.

	* src/cmd_info.py: Redefined the --deps action to actually return
	all leaf dependencies.

	* src/util.py: Added method leaves() in Depend to report leaf
	dependecies.

2002-11-26  Emmanuel Beffara  <manu@beffara.org>

	* src/cmd_info.py: Added action --check in rubber-info, turned
	--help and --version into actions.

	* src/__init__.py: Fixed the regular expression for file name
	tracking in logs.

	* src/__init__.py, src/info.py: Introduced the method info() in
	Message for displaying non-error information.

2002-11-21  Emmanuel Beffara  <manu@beffara.org>

	* NEWS: Introduced the NEWS file.

	* src/__init__.py (Message), ...: Added the short error reporting
	style, introduced --short for it in rubber and rubber-info.

2002-11-17  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Added the processed_sources variable to avoid
	looping when some source includes itself.

2002-11-14  Emmanuel Beffara  <manu@beffara.org>

	* all: Centralized the definition of _ in the main module to
	prepare for proper gettextization.

	* src/__init__.py: Fixed an error in line number matching.

2002-11-13  Emmanuel Beffara  <manu@beffara.org>

	* setup.py (do_check): Added checks for system-specific features.

	* src/__init__.py: Modified the execute method so that it reads
	the standard output of the external program (thus avoiding possible
	deadlocks and allowing for output redirection).

	* rubber.in, man/:  Added a relevant return code to the command-line.

	* src/cmdline.py, src/__init__.py: Moved the report of compilation
	errors out of the main source into the command-line interface.

2002-11-12  Emmanuel Beffara  <manu@beffara.org>

	* src/__init__.py: Restructured message displaying, by introducing