@@ -5,12 +5,14 @@ Bugs to fix:
 - find a good way for graphics.mpost to handle the fact that several figures
   can be produced by the same source (without using a global variable)
 
+- currently the interface requires LaTeX errors to be reported, while BibTeX
+  errors are reported after compilation; harmonize this, i.e. find a stable
+  way for modules to report their errors
+
 Improvements:
 
 - let modules that need external programs look for them and fail to load if
   these program are not found
-
-- parse BibTeX log files to make errors explicit
 
 - specify clearly what kind of messages each verbosity level is for
 
